--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="carousel-item frame-2">
                            <div class="carousel-innerframe">
                               <div id="wb_Text3">
-                                 <span style="color:#C0C0C0;font-family:Arial;font-size:29px;letter-spacing:1.07px;"><strong>AutoDiag BiH</strong></span><span style="color:#FFFFFF;font-family:Arial;font-size:19px;letter-spacing:1.07px;"><em><br><br><br>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; design by: gizza </em></span>
+                                 <span style="color:#C0C0C0;font-family:Arial;font-size:29px;letter-spacing:1.07px;"><strong>AutoDiag BiH</strong></span><span style="color:#FFFFFF;font-family:Arial;font-size:19px;letter-spacing:1.07px;"><em><br><br><br>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; design by: Dino </em></span>
                               </div>
                            </div>
                         </div>
