--- a/index.html
+++ b/index.html
@@ -149,11 +149,11 @@
    <div id="wb_FlexContainer2">
       <div id="FlexContainer2">
          <div id="wb_Card1" style="display:flex;text-align:center;z-index:18;" class="card">
-            <div id="Card1-card-header">OBD II</div>
+            <div id="Card1-card-header">Kada i zasto modifikovati ecu vaseg vozila</div>
             <div id="Card1-card-body">
                <hr id="Card1-card-item1">
                <img id="Card1-card-item2" src="images/15954075.jpg" width="1000" height="988" alt="" title="">
-               <div id="Card1-card-item3">OBD II dijagnostika<br><br><br>Interfejsi za OBDII autodijagnostiku koja se može primjenjivati za osnovnu autodijagnostiku svih novijih automobila (>2001 benzin >2004 diesel)</div>
+               <div id="Card1-card-item3">OBD II</div>
             </div>
             <div id="Card1-card-item4"><a href="./page2.html">Learn More</a></div>
          </div>
