--- a/index.html
+++ b/index.html
@@ -149,16 +149,16 @@
    <div id="wb_FlexContainer2">
       <div id="FlexContainer2">
          <div id="wb_Card1" style="display:flex;text-align:center;z-index:18;" class="card">
-            <div id="Card1-card-header">Dijagnostika vozila</div>
+            <div id="Card1-card-header">WinOLS</div>
             <div id="Card1-card-body">
                <hr id="Card1-card-item1">
                <img id="Card1-card-item2" src="images/15954075.jpg" width="1000" height="988" alt="" title="">
-               <div id="Card1-card-item3">"DPF" "EGR"</div>
+               <div id="Card1-card-item3">EDC17</div>
             </div>
             <div id="Card1-card-item4"><a href="./page2.html">Learn More</a></div>
          </div>
          <div id="wb_Card2" style="display:flex;text-align:center;z-index:19;" class="card">
-            <div id="Card2-card-header">ECU kloniranje</div>
+            <div id="Card2-card-header">VAG EDC17C46e</div>
             <div id="Card2-card-body">
                <hr id="Card2-card-item1">
                <img id="Card2-card-item2" src="images/17297467.jpg" width="400" height="399" alt="" title="">
